chapter10/lab10.2/network-policy-cleanup-controller.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kyverno-cleanup-controller
  namespace: kyverno
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: cleanup-controller
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - podSelector:
        matchLabels:
          component: kube-apiserver
    ports:
    - port: 9443
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: test-pod
    ports:
    - port: 8000
      protocol: TCP
  - from:
    - ipBlock:
        cidr: 192.168.49.2/32
    ports:
    - port: 9443
      protocol: TCP
  egress:
  - {}
